--- a/app/assets/stylesheets/form/_newsletter-subscribe.scss
+++ b/app/assets/stylesheets/form/_newsletter-subscribe.scss
@@ -18,14 +18,14 @@
 
 .newsletter-subscribe__input,
 .newsletter-subscribe__submit {
-  min-height: 32px;
+  min-height: 40px;
 }
 
 input.newsletter-subscribe__input {
   @extend %clarat_rounding_start;
   background: $brand_white;
   width: 200px;
-  margin-right: 4px;
+  margin-right: 10px;
   padding: 0 10px;
 
   html[dir="rtl"] & {
@@ -35,6 +35,7 @@ input.newsletter-subscribe__input {
 
 .newsletter-subscribe__submit {
   padding: 0 15px;
+  font-size: 14px;
 
   html[dir="rtl"] & {
     @extend %clarat_rounding_start;
