--- a/app/assets/stylesheets/modules/_hero.scss
+++ b/app/assets/stylesheets/modules/_hero.scss
@@ -31,7 +31,7 @@
 }
 
 .Hero__link-to-explaination {
-  @extend %roboto_slabbold;
+  @extend %roboto_bold;
   color: inherit;
   text-decoration: none;
   border-top: 1px solid;
