--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -74,10 +74,17 @@
     }
   }
 
+  .wrapper-inner {
+    .content-main > & {
+      padding: 15px;
+    }
+  }
+
   .Logo {
     height: 65px;
     width: 100px;
     min-height: 0;
+    margin-left: 0;
 
     &,
     body.refugees &, // Specifity
@@ -585,6 +592,7 @@
     -webkit-flex: 1 0 50%;
     -ms-flex: 1 0 50%;
     flex: 1 0 50%;
+    padding: .5em 0;
 
     &#age {
       -webkit-order: 1;
@@ -956,6 +964,10 @@
 
   #off-canvas-container {
     display: block;
+  }
+
+  .nav-off-canvas-trigger {
+    margin-bottom: 40px;
   }
 
   .Listing-results__headline,
