WIP: Add explaination video, locale/translatable strings

--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -8,6 +8,10 @@
   position: relative;
   min-height: 100px;
   @extend %clearfix;
+
+  .template--offers-index & {
+    min-height: 0;
+  }
 }
 
 button.header-main__nav-main-trigger {
