--- a/app/assets/stylesheets/modules/_hero.scss
+++ b/app/assets/stylesheets/modules/_hero.scss
@@ -22,7 +22,7 @@
   flex: 1;
   position: relative;
   margin: 0 auto;
-  width: 1200px;
+  width: 100%;
   display: flex;
   justify-content: flex-start;
 }
