--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -4,5 +4,8 @@
   = render 'layouts/partials/callout/callout'
 
   .Explainaition-area#explaination
-    h4.Explainaition-area__headline Explaination Video
-    p Video itself
+    h4.Explainaition-area__headline = t '.explaination.headline'
+    .Explainaition-area__video
+      | <video class="" controls="" preload="none" poster="http://media.w3.org/2010/05/video/poster.png" width="0" height="0">
+          <source id="mp4" src="http://media.w3.org/2010/05/video/movie_300.mp4" type="video/mp4">
+        </video>
