Added translations, enhanced styled selects

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -50,6 +50,10 @@ a[href^="fax"]:hover {
   unicode-bidi: embed;
 }
 
+.page-wrap {
+  //overflow: auto;
+}
+
 .offcanvas-active {
   .page-wrap {
     position: fixed;
