--- a/app/assets/stylesheets/modules/_hero.scss
+++ b/app/assets/stylesheets/modules/_hero.scss
@@ -23,6 +23,7 @@
   position: relative;
   margin: 0 auto;
   width: 100%;
+  max-width: 1200px;
   display: flex;
   justify-content: flex-start;
 }
