Scaffold rtl layout

--- a/app/assets/stylesheets/base/_footer.scss
+++ b/app/assets/stylesheets/base/_footer.scss
@@ -23,6 +23,10 @@
 
 .footer-main__facebook {
   display: inline-block;
+
+  html[dir="rtl"] & {
+   margin-right: 20px;
+  }
 }
 
 .footer-main__nav-legal {
