--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -23,6 +23,12 @@ button.header-main__nav-main-trigger {
   margin-right: 10px;
   margin-top: 20px;
 
+  [dir="rtl"] & {
+    margin-left: 10px;
+    margin-right: 15px;
+  }
+
+
   svg {
     pointer-events: none;
     width: 28px;
