--- a/app/assets/stylesheets/navigation/_nav-main.scss
+++ b/app/assets/stylesheets/navigation/_nav-main.scss
@@ -6,6 +6,11 @@
   top: auto;
   right: 0;
   margin-top: 100px;
+
+  [dir="rtl"] & {
+    right: auto;
+    left: 0;
+  }
 }
 
 .nav-main__list {
@@ -16,6 +21,11 @@
 
 .nav-main__listitem {
   margin-left: 30px;
+
+  [dir="rtl"] & {
+    margin-left: 0;
+    margin-right: 30px;
+  }
 }
 
 .nav-main__link {
