--- a/app/views/layouts/partials/_searchfield_advanced.html.slim
+++ b/app/views/layouts/partials/_searchfield_advanced.html.slim
@@ -1,7 +1,4 @@
-header.header-main
-  .wrapper-inner
-    .Searchfield.Searchfield--adcanced
-
-      = render '/offers/shared/search_form', search_form: search_form,
-        labels: :short,
-        current_section: current_section
+.Searchfield.Searchfield--advanced.wrapper-inner
+  = render '/offers/shared/search_form', search_form: search_form,
+    labels: :short,
+    current_section: current_section
