Remove explaination video for now

--- a/app/assets/stylesheets/modules/_explaination-area.scss
+++ b/app/assets/stylesheets/modules/_explaination-area.scss
@@ -1,5 +1,6 @@
 .Explainaition-area {
-  display: flex;
+  display: none;
+  //display: flex;
   text-align: center;
   flex-direction: column;
   margin: 2em 0;
