--- a/app/assets/stylesheets/modules/_hero.scss
+++ b/app/assets/stylesheets/modules/_hero.scss
@@ -37,7 +37,8 @@
   text-decoration: none;
   border-top: 1px solid;
   margin-top: 18px;
-  display: block;
+  //display: block;
+  display: none;
   font-size: 24px;
   background: image-url('ico_play.svg') no-repeat left bottom;
   background-size: 60px 60px;
