--- a/app/assets/stylesheets/modules/_callout.scss
+++ b/app/assets/stylesheets/modules/_callout.scss
@@ -2,6 +2,7 @@
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 45px;
   overflow: auto;
 
   @supports (display: grid) {
