--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -5,11 +5,11 @@
 
 
 
-  .Explainaition-area#explaination
+  / .Explainaition-area#explaination
     h4.Explainaition-area__headline = t '.explaination.headline'
     .Explainaition-area__wrapper
       .Explainaition-area__video
-        | <iframe src="http://player.vimeo.com/video/47387431?title=0&amp
+        | <iframe src="https://player.vimeo.com/video/47387431?title=0&amp
           ;byline=0&amp;portrait=0&amp;autoplay=0"
           width="1600" height="900" frameborder="0" webkitAllowFullScreen
           mozallowfullscreen allowFullScreen></iframe>
