Small iOS refinements

--- a/app/assets/stylesheets/mediaqueries/_xs.scss
+++ b/app/assets/stylesheets/mediaqueries/_xs.scss
@@ -6,4 +6,12 @@
     background-size: contain;
     background-position: -55% center;
   }
+
+  .Mission__headline {
+    line-height: 24px;
+  }
+
+  .Mission__text {
+    line-height: 16px;
+  }
 }
