--- a/app/assets/stylesheets/form/_newsletter-subscribe.scss
+++ b/app/assets/stylesheets/form/_newsletter-subscribe.scss
@@ -23,6 +23,8 @@
 
 input.newsletter-subscribe__input {
   @extend %clarat_rounding_start;
+  webkit-appearance: none;
+  border-radius: 0 !important; // for iOS
   background: $brand_white;
   width: 200px;
   margin-right: 10px;
