--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -119,6 +119,7 @@
 
       #search_form_query {
         width: 100%; // to fit in its twitter-typeahead container
+        border-radius: 0 !important; // for iOS
       }
     }
   }
