update clarat_base, fixed all the broken tests, removed category stuff and fine-tuned language caching for callout

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,5 +1,5 @@
 - content_for :canonical_url, request.url
-- cache ['home_page', I18n.t] do
+- cache ['home_page', I18n.t, @current_section] do
 
   = render 'layouts/partials/callout/callout'
 
