--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -180,6 +180,15 @@
   }
 
   .Searchfield {
+
+    body:not(.template--pages-home):not(.template--offers-index) & {
+      padding-top: 0;
+
+      .main-search__wrapper {
+        padding-top: 0 !important;
+      }
+    }
+
     &.wrapper-inner {
       padding-left: 0;
       padding-right: 0;
