add target, fix button height, TO DO: improve search form box height

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -347,7 +347,7 @@
   }
 
   #new_search_form {
-    height: 107px;
+    height: auto;
     flex-direction: row;
     width: 100%;
     margin-right: 0;
