--- a/app/views/pages/widget_hg.html.slim
+++ b/app/views/pages/widget_hg.html.slim
@@ -1,7 +1,7 @@
 .wrapper-inner
   h1.Logo style="float:none; display:block; position: relative;"
   br
-  .Distributor style="float:none; max-height: 105px; width: 100%; margin-top: 0px;"
+  .widget-hg
     - search_form = @search_form || SearchForm.new(cookies)
     = render '/offers/shared/search_form', search_form: search_form,
                                            labels: :short,
