--- a/app/views/pages/widget_swaf.html.slim
+++ b/app/views/pages/widget_swaf.html.slim
@@ -1,5 +1,5 @@
 .wrapper-inner
-  h1.Logo style="float:none; display:block; position: relative;"
+  h1.Logo
   br
   .widget-swaf
     - search_form = @search_form || SearchForm.new(cookies)
