--- a/app/assets/javascripts/location/templates/location_by_browser_fallback.hbs
+++ b/app/assets/javascripts/location/templates/location_by_browser_fallback.hbs
@@ -1,5 +1,5 @@
-<div class="JS-Geolocation__prompt">
+<div class='JS-Geolocation__prompt'>
   {{content}}
   &nbsp;
-  <i class="fa fa-arrow-down"></i>
+  <i class='fa fa-arrow-down'></i>
 </div>
