--- a/app/assets/javascripts/location/templates/location_by_browser_prompt.hbs
+++ b/app/assets/javascripts/location/templates/location_by_browser_prompt.hbs
@@ -1,4 +1,4 @@
-<div class="JS-Geolocation__prompt JS-Geolocation__prompt--interactive">
-  <i class="fa fa-map-marker"></i>
+<div class='JS-Geolocation__prompt JS-Geolocation__prompt--interactive'>
+  <i class='fa fa-map-marker'></i>
   {{content}}
 </div>
