--- a/app/assets/javascripts/location/templates/location_by_browser_waiting.hbs
+++ b/app/assets/javascripts/location/templates/location_by_browser_waiting.hbs
@@ -1,4 +1,4 @@
-<div class="JS-Geolocation__prompt">
+<div class='JS-Geolocation__prompt'>
   {{content}}
-  <i class="fa fa-arrow-up"></i>
+  <i class='fa fa-arrow-up'></i>
 </div>
