--- a/app/assets/javascripts/templates/autocomplete.hbs
+++ b/app/assets/javascripts/templates/autocomplete.hbs
@@ -1,10 +1,13 @@
-.hit
-  .offer {{{ _highlightResult.name.value }}}
-
-  .address
+<div class='hit'>
+  <div class='offer'>
+    {{ _highlightResult.name.value }}
+  </div>
+  <div class='address'>
     {{#location_street}}
     {{{ location_street }}}, {{{ location_zip }}} {{{ location_city.name }}}
     {{/location_street}}
     {{^location_street}}
     Überall erreichbar, egal, wo du bist
     {{/location_street}}
+  </div>
+</div>
