--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,7 +1,7 @@
 - content_for :canonical_url, request.url
 - cache ['home_page', I18n.t, @current_section] do
 
-  = render 'layouts/partials/callout/callout'
+  = render 'layouts/partials/callout/callout', current_section: @current_section
 
 
 
