--- a/app/views/pages/section_choice.html.slim
+++ b/app/views/pages/section_choice.html.slim
@@ -35,5 +35,5 @@
           p.section-choice__text
             = t '.cta.refugees.text'
 
-    = render 'layouts/partials/callout/callout_neutral'
+    = render 'layouts/partials/callout/callout_neutral', current_section: @current_section
 
